Alignment bug fixed.

--- a/ssip4/static/sass/_home.sass
+++ b/ssip4/static/sass/_home.sass
@@ -61,7 +61,7 @@ nav.nav-desktop
     text-align: center
     padding-bottom: 2rem
     @include media-breakpoint-up(md)
-      justify-content: end
+      justify-content: fled-end
       text-align: left
       min-height: 400px
 
